--- a/style.css
+++ b/style.css
@@ -22,17 +22,26 @@
 
 .blogList{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .blogList_card{
     display: flex;
     flex-direction: column;
     margin: 2%;
-    border: 2px solid grey;
+    border: 4px solid lightgray;
     width: 40%;
 }
 
+.blogList_card *{
+    padding-left: 3%;
+    margin: 1%;
+}
+
+
 .card_title{
+    margin-top: 2%;
     margin-bottom: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 200%;
@@ -47,6 +56,14 @@
     font-weight: bold;
 }
 
-.blogList, p{
+.card_design{
+    color: green;
+    font-weight: bold;
+}
+
+
+/*
+.blogList p{
     margin: 1%;
 }
+*/
