--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #navbar{
     display:flex;
-    background-color: bisque;
+    background-color: lightgray;
     justify-content: space-between;
 }
 
@@ -8,11 +8,12 @@
     text-decoration: underline;
     color: grey;
     padding-left: 1%;
-
 }
 
 #navbar_title{
     padding: 2%;
+    text-decoration: underline;
+    font-size: 200%;
 }
 
 #navbar_srchButton{
@@ -39,12 +40,16 @@
     margin: 1%;
 }
 
+.blogList_card:hover{
+    border: 1px solid lightgray;
+}
+
 
 .card_title{
     margin-top: 2%;
     margin-bottom: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 200%;
+    font-size: 170%;
 }
 
 .card_date{
@@ -59,6 +64,10 @@
 .card_design{
     color: green;
     font-weight: bold;
+}
+
+.card_blogLink{
+    margin-top: 20%;
 }
 
 
