--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     padding-left: 1%;
 }
 
+#navbar_subscribe:hover{
+    cursor: pointer;
+}
+
 #navbar_title{
     padding: 2%;
     text-decoration: underline;
@@ -67,7 +71,7 @@
 }
 
 .card_blogLink{
-    margin-top: 20%;
+    margin-top: auto;
 }
 
 
